# tasks

image_processor/: BitmapStructure.cpp  BitmapStructure.h  CMakeLists.txt  ImageChanger.cpp  ImageChanger.h  image_processor.cpp  readme.md
